clusters/talos-robbinsdale/apps/kubevirt/virtvnc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kv-novnc
  name: kv-novnc
  namespace: kubevirt
spec:
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app: kv-novnc
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kv-novnc
  namespace: kubevirt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kv-novnc
  template:
    metadata:
      labels:
        app: kv-novnc
    spec:
      serviceAccountName: kv-novnc
      # nodeSelector:
      #   node-role.kubernetes.io/master: ''
      # tolerations: 
      # - key: "node-role.kubernetes.io/master"
      #   operator: "Equal"
      #   value: ""
      #   effect: "NoSchedule"
      containers:
      - name: kv-novnc
        image: ghcr.io/scog/kubevirt-novnc:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            port: 8001
            path: /
            scheme: HTTP
          failureThreshold: 30
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubevirt
  namespace: kubevirt
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: robbinsdale
      namespace: envoy-gateway-system
  hostnames:
    - "kubevirt.rajsingh.info" 
    - "kubevirt.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kv-novnc
          port: 8001
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
